kustomize/apps/jupyter-web-app/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 3
  template:
    spec:
      containers:
      - name: jupyter-web-app
        imagePullPolicy: IfNotPresent
        image: k8scc01covidacr.azurecr.io/jupyter-apis:694a5a217a0274b2c3b6704921f9a0878fd8cdaf
        ports:
        - containerPort: 5001
        volumeMounts:
        - name: config-volume
          mountPath: /etc/config
        - name: logos-volume
          mountPath: /static/assets/logos/
      - name: nginx
        image: docker.io/nginxinc/nginx-unprivileged:1.21-alpine
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: "0.25"
            memory: "250Mi"
          requests:
            cpu: "0.25"
            memory: "250Mi"
        volumeMounts:
          - name: jwa-nginx-configuration
            mountPath: /etc/nginx/nginx.conf
            subPath: nginx.conf
          - name: static-files
            mountPath: /etc/nginx/html/
        ports:
          - name: http
            containerPort: 5000
      serviceAccountName: service-account
      volumes:
        - name: jwa-nginx-configuration
          configMap:
            name: jwa-nginx-configuration
        - name: static-files
          emptyDir: {}
        - configMap:
            name: jupyter-web-app-config
          name: config-volume
        - configMap:
            name: jupyter-web-app-logos
          name: logos-volume
      imagePullSecrets:
      - name: k8scc01covidacr-registry-connection
