kustomize/apps/jupyter-web-app/base/deployment_patch.yaml
# TODO(https://github.com/kubeflow/manifests/issues/774): This is a patch
# that pulls out from core the parts that should be in pulled into stacks.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  template:
    spec:
      containers:
      - name: jupyter-web-app
        imagePullPolicy: IfNotPresent
